--- a/app/index.html
+++ b/app/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="assets/vendor.css">
     <link rel="stylesheet" href="assets/ember-learning-ember.css">
 
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCt25sWkTZfP6AAsjD1zt8cA3rEJ9moPFQ"></script>
 
     {{content-for 'head-footer'}}
   </head>
